@@ -1,6 +1,7 @@
 46
 ================
 
+12/10/22 Rename foundanimals to FoundAnimals/24Pet #1182
 12/10/22 Use search input type to prevent android keyboard bug with return key
 30/09/22 Update signature widget to latest version
 20/09/22 Record changes to person/animal flags in the log #1176
